# animal-shelter-bot

./: .gitignore  .pylintrc  README.md  TASK.md  docker-compose.yaml  pyproject.toml
animal_shelter_bot/: admin_block.py  db.py  docker-compose.yaml  init.sql  main.py  registration.py  states.py  user_block.py  utils.py
animal_shelter_bot/admin_block/app/: handlers.py
animal_shelter_bot/app/: handlers.py  keyboards.py
animal_shelter_bot/const/: buttons.py  messages.py
animal_shelter_bot/data/: handlers.json  inline_menus.json  reply_keyboards.json
animal_shelter_bot/registration/: const.py
animal_shelter_bot/registration/app/: db.py  handlers.py  keyboards.py  utils.py
animal_shelter_bot/user_block/: const.py
animal_shelter_bot/user_block/app/: handlers.py  keyboards.py
sql_scripts/: init.sql
